<resources>
    <string name="app_name">Financial Assistant</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="loading">Загрузка…</string>
    <string name="have_not_account">Нет аккаунта?</string>
    <string name="have_account">Есть аккаунт?</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="resume">Продолжить</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_email">Введите адрес электронной почты</string>
    <string name="enter_password_again">Введите пароль (еще раз)</string>
    <string name="log_in_again">Авторизуйтесь</string>
    <string name="install_code">Введите код доступа</string>
    <string name="forget_code">Забыли код?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="del">DEL</string>
    <string name="go">GO</string>

    <string name="back">Назад</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_budget">Бюджет</string>
    <string name="title_goal">Цели</string>
    <string name="title_briefcase">Портфель</string>
    <string name="title_LK">Профиль</string>
    <string name="transaction">Транзакции</string>
    <string name="history">История</string>
    <string name="report">Аналитика</string>
    <string name="category">Категории</string>
    <string name="menu">Меню</string>
    <string name="strategies">Стратегии</string>
    <string name="shares_of_assets">Доли активов</string>
    <string name="assets">Активы</string>
    <string name="install_code_info">Установите код доступа для быстрого входа в приложение</string>

    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="complete">Завершить</string>
    <string name="questionnaire">Анкета</string>
    <string name="exit">Выйти</string>
    <string name="shares_of_assets_info_questionnaire_not_found">Нам необходимо больше информации чтобы сделать распределение активов максимально оптимально именно для Вас</string>

    <string name="test">
        Инвестирование — это процесс, который включает в себя размещение капитала с целью получения прибыли в будущем. Он может принимать различные формы, включая покупку акций, облигаций, недвижимости, а также вложения в стартапы и другие финансовые инструменты.
\n\n
Первый шаг в процессе инвестирования — это определение своих финансовых целей. Инвесторы должны четко понимать, зачем они хотят инвестировать: для накопления на пенсию, покупки жилья, образования детей или других целей. Это понимание поможет выбрать правильную стратегию и инструменты для инвестирования.
\n\n
Следующий этап — это анализ рисков. Каждое инвестиционное решение связано с определенными рисками, и важно оценить, насколько Вы готовы к ним. Некоторые инвесторы предпочитают более консервативные подходы, такие как облигации или депозитные счета, в то время как другие могут быть готовы к более высоким рискам ради потенциально большей прибыли, например, инвестируя в акции или криптовалюты.
\n\n
После определения целей и оценки рисков, инвесторы должны провести исследование доступных инвестиционных инструментов. Это может включать изучение фондового рынка, анализ компаний, в которые планируется инвестировать, или изучение рынка недвижимости. Важно понимать, как работают различные активы и какие факторы могут повлиять на их стоимость.
\n\n
Когда инвестор выбрал подходящие инструменты, следующим шагом является создание инвестиционного портфеля. Портфель — это совокупность активов, которые инвестор держит. Диверсификация портфеля — ключевой аспект успешного инвестирования, так как она помогает снизить риски. Инвесторы могут распределять свои средства между различными классами активов, такими как акции, облигации и недвижимость, чтобы минимизировать влияние негативных событий на общую стоимость портфеля.
\n\n
После создания портфеля важно регулярно отслеживать его производительность и вносить изменения по мере необходимости. Рынки могут быть волатильными, и то, что работало в прошлом, не всегда будет работать в будущем. Инвесторы должны быть готовы адаптироваться к изменениям в экономической среде и пересматривать свои стратегии.
\n\n
Наконец, важно помнить о налоговых последствиях инвестирования. Разные инвестиционные инструменты могут облагаться налогами по-разному, и понимание этих аспектов поможет избежать неприятных сюрпризов в будущем.
\n\n
В целом, инвестирование — это долгосрочный процесс, требующий терпения, знаний и стратегического мышления. Успешные инвесторы понимают, что не существует универсального подхода, и каждый должен разрабатывать свою стратегию, основываясь на своих целях, рисках и предпочтениях.
    </string>
    <string name="capital">Капитал</string>
    <string name="analytics">Аналитика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>