<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/main_color"/>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextViewClickWelcome"
            android:text="@string/have_account"
            android:textColor="@color/gray" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewClickWelcome"

            android:id="@+id/textViewLogIn"
            android:text="@string/enter"
            android:textColor="@color/dodger_blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"

        style="@style/TextViewLabelWelcome"
        android:text="@string/register"
        android:textSize="35sp"
        android:layout_marginTop="100dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <EditText
        style="@style/EditTextWelcome"

        android:id="@+id/editTextTextEmailAddressRegister"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        style="@style/EditTextWelcome"

        android:id="@+id/editTextNumberPasswordRegister"
        android:hint="@string/enter_password"
        android:inputType="numberPassword"
        android:layout_marginTop="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressRegister" />

    <EditText
        style="@style/EditTextWelcome"

        android:id="@+id/editTextNumberPasswordRegisterPasswordAgain"
        android:hint="@string/enter_password_again"
        android:inputType="numberPassword"
        android:layout_marginTop="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPasswordRegister" />

    <Button
        android:id="@+id/buttonResumeRegister"

        style="@style/ButtonWelcome"
        android:text="@string/resume"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPasswordRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>