<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/main_color"/>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextViewClickWelcome"
            android:text="@string/have_not_account"
            android:textColor="@color/gray" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextViewClickWelcome"

            android:id="@+id/textViewRegister"
            android:text="@string/register"
            android:textColor="@color/dodger_blue" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"

        style="@style/TextViewLabelWelcome"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:layout_marginTop="100dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <EditText
        style="@style/EditTextWelcome"

        android:id="@+id/editTextTextEmailAddressLogIn"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        style="@style/EditTextWelcome"

        android:id="@+id/editTextPasswordLogIn"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginTop="25sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressLogIn" />

    <Button
        style="@style/ButtonWelcome"

        android:id="@+id/buttonResumeLogIn"
        android:text="@string/resume"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogIn" />




</androidx.constraintlayout.widget.ConstraintLayout>