<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeFragmentCode">

    <include layout="@layout/main_color"/>

    <EditText
        style="@style/EditTextWelcome"

        android:id="@+id/editTextNumberCode"
        android:hint="@string/install_code"
        android:maxLength="4"
        android:inputType="numberPassword"

        app:layout_constraintBottom_toTopOf="@+id/buttonCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/ButtonWelcome"

        android:id="@+id/buttonCode"
        android:text="@string/resume"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextViewClickWelcome"

        android:id="@+id/textViewReset"
        android:text="@string/log_in_again"
        android:layout_marginBottom="50sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>