<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.lk.fragments.main.LKMainFragment">

    <include layout="@layout/main_color" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"

            style="@style/TextViewInfoWelcome"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            style="@style/LinearLayoutInfoLK.Drawable"

            android:id="@+id/linearLayoutEmailLK"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/TextViewInfoLK"

                android:layout_gravity="center"
                android:maxLength="25"
                android:text="@string/loading" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                style="@style/ImageViewArrowLK"

                android:src="@mipmap/ic_right_arrow_foreground" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutInfoLK.Drawable"

            android:id="@+id/linearLayoutTestLK"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmailLK"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/TextViewInfoLK"

                android:layout_gravity="center"
                android:maxLength="25"
                android:text="Анкета" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                style="@style/ImageViewArrowLK"

                android:src="@mipmap/ic_right_arrow_foreground" />

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutInfoLK"

            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageViewExitLK"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_exit_red_foreground" />

            <TextView
                style="@style/TextViewInfoLK"

                android:id="@+id/textViewExitLK"
                android:layout_gravity="center"
                android:text="@string/exit"
                android:textColor="@color/red" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>