<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.lk.fragments.LKQuestionnaireFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewLabelWelcome"

                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_marginStart="40dp"
                    android:text="@string/questionnaire" />

                <ImageView
                    android:id="@+id/imageViewWelcome"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@android:drawable/ic_delete" />

            </LinearLayout>

            <TextView
                style="@style/TextViewInfoLK"

                android:id="@+id/textViewQuestion"
                android:text="@string/question"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <RadioGroup
                android:id="@+id/radioGroupQuestionnaire"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    style="@style/RadioButtonTest"

                    android:id="@+id/radioButton1" />

                <RadioButton
                    style="@style/RadioButtonTest"

                    android:id="@+id/radioButton2" />

                <RadioButton
                    style="@style/RadioButtonTest"

                    android:id="@+id/radioButton3" />

                <RadioButton
                    style="@style/RadioButtonTest"

                    android:id="@+id/radioButton4" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewBackArrow"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_left_arrow_test_foreground" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="InefficientWeight" />

                <ImageView
                    android:id="@+id/imageViewFurtherArrow"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_right_arrow_test_foreground" />

            </LinearLayout>

            <Button
                style="@style/ButtonWelcome"

                android:id="@+id/buttonSaveQuestionnaire"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:text="@string/complete" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>